[package]
name = "znapper"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pin to 22 to avoid https://github.com/time-rs/time/issues/293 "fix".
time = "=0.2.22"
tracing = "0.1"
tracing-subscriber = "0.2"
structopt = { version = "0.3", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

